feat: version 2 del html consorcio del bajio

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 	<header id="home">
 		<!-- Background Image -->
 		<div class="bg-img">
-			<div id="myCarousel" class="carousel " data-ride="carousel">
+			<div id="myCarousel" class="carousel " data-ride="carousel" >
     <!-- Indicators -->
     <!-- Wrapper for slides -->
-    <div class="carousel-inner">
+    <div class="carousel-inner" style="height: 100vh" >
       <div class="item active">
         <img src="img/background1.jpg" alt="Los Angeles" >
       </div>
@@ -70,7 +70,7 @@
 					<div class="navbar-brand">
 						<a href="index.html">
 							<img class="logo" src="img/logoBajio.png" alt="logo">
-								<img class="logo-alt" src="img/logoBlancoSinFondo.png" alt="logo">
+								<img class="logo-alt" src="img/logoBlancoSinFondo.png" style="max-height: 120px;">
 						</a>
 					</div>
 					<!-- /Logo -->
@@ -88,7 +88,7 @@
 					<li><a href="#about">Filosofía de la empresa</a></li>
 					<li><a href="#service">Servicios</a></li>
 					<li><a href="#pricing">Solicita tu cotización</a></li>
-					<li><a href="#team">Enlaces</a></li>
+					<!-- <li><a href="#team">Enlaces</a></li> -->
 					<li><a href="#contact">Contacto</a></li>
 				</ul>
 				<!-- /Main navigation -->
@@ -136,7 +136,7 @@
 				<div class="col-md-12 pull-right ">
 					<div class="about">
 					<img class="img-responsive pull-left" src="./img/blog2.jpg" width="400" alt="" style="margin-right: 15px">
-						<i class="fa fa-cogs" style="color: #5dbd9f;"></i>
+						<i class="fa fa-cogs" style="color: #4b9880;"></i>
 						<h3>Como nos describimos</h3>
 						<p  align="justify">Somos una empresa  en la que se involucran  perfiles profesionistas diversos, así como otras empresas del mismo ramo con las  que formamos alianzas con el objetivo proporcionar a nuestros clientes soluciones integrales de asesoría, capacitación y gestión  en materia ambiental y seguridad laboral; basados en los valores de honestidad, responsabalilidad, lealtad y respeto. </p>
 					</div>
@@ -146,7 +146,7 @@
 					<div class="about">
 
 					<img class="img-responsive pull-right" src="./img/blog1.jpg" width="400" alt="" style="margin-left: 15px">
-						<i class="fa fa-bookmark" style="color: #5dbd9f; padding: 5px;"></i>
+						<i class="fa fa-bookmark" style="color: #4b9880; padding: 5px;"></i>
 						<h3>Misión</h3>
 						<p style=" padding: 30px" align="justify">Somos una empresa mexicana  comprometida con la sociedad y el medio ambiente, que ofrece soluciones integrales en materia ambiental y seguridad en el trabajo, mediante la asesoría, gestión y capacitación de calidad; coadyuvando así en los proyectos de nuestros clientes.</p>
 					</div>
@@ -156,7 +156,7 @@
 				<div class="col-md-12 pull-right">
 					<div class="about">
 							<img class="img-responsive pull-left" src="./img/blog3.jpg" width="400" alt="" style="margin-right: 15px">
-						<i class="fa fa-bookmark" style="color: #5dbd9f;"></i>
+						<i class="fa fa-bookmark" style="color: #4b9880;"></i>
 						<h3>Visión</h3>
 						<p style=" padding: 30px" align="justify">Ser la empresa reconocida por la calidad de sus servicios de asesoría y gestión en materia ambiental y seguridad laboral a través de nuestros asesores altamente capacitados, compormetivos y eficientes.</p>
 					</br>
@@ -166,7 +166,7 @@
 				<div class="col-md-12"  >
 					<div class="about" >
 					
-						<i class="fa fa-check-square" style="color: #5dbd9f;"></i>
+						<i class="fa fa-check-square" style="color: #4b9880;"></i>
 						<h3>Valores</h3>
 						<p> HONESTIDAD, RESPONSABILIDAD, RESPETO Y LEALTAD</p>
 					</div>
@@ -199,7 +199,7 @@
 				<!-- service -->
 				<div class="col-md-9 col-sm-6">
 					<div class="service">
-						<i class="fa fa-medkit" style="color: #5dbd9f;"></i>
+						<i class="fa fa-medkit" style="color: #4b9880;"></i>
 						<h3>Seguridad  Laboral</h3>
 						<p>Asesoría, capacitación y gestión para el cumplimiento normativo en materia de seguridad laboral ante la Secretaría de Trabajo y Previsión Social.</p>
 					</div>
@@ -211,7 +211,7 @@
 				<!-- service -->
 				<div class="col-md-9 col-sm-6">
 					<div class="service">
-						<i class="fa fa-pagelines" style="color: #5dbd9f;"></i>
+						<i class="fa fa-pagelines" style="color: #4b9880;"></i>
 						<h3>Medio Ambiente</h3>
 						<p>Asesoría, capacitación y gestión para el cumplimiento normativo en materia ambiental</p>
 					</div>
@@ -223,7 +223,7 @@
 				<!-- service -->
 				<div class="col-md-9 col-sm-6">
 					<div class="service">
-						<i class="fa fa-file-image-o" style="color: #5dbd9f;"></i>
+						<i class="fa fa-file-image-o" style="color: #4b9880;"></i>
 						<h3>Gestión Ambiental</h3>
 						<p>Asesoría y capacitación en sisitemas de gestión ambiental, basados en la norma ISO 14001:2015</p>
 					</div>
@@ -429,7 +429,7 @@
 				<!-- contact -->
 				<div class="col-sm-4">
 					<div class="contact">
-						<i class="fa fa-phone" style="color: #5dbd9f;"></i>
+						<i class="fa fa-phone" style="color: #4b9880;"></i>
 						<h3>Telefono de Contacto</h3>
 						<p>477 173 41 79</p>
 					</div>
@@ -439,7 +439,7 @@
 				<!-- contact -->
 				<div class="col-sm-4">
 					<div class="contact">
-						<i class="fa fa-envelope" style="color: #5dbd9f;"></i>
+						<i class="fa fa-envelope" style="color: #4b9880;"></i>
 						<h3>Correo Electronico</h3>
 						<p>cladiaserrano@gmail.com</p>
 					</div>
@@ -449,7 +449,7 @@
 				<!-- contact -->
 				<div class="col-sm-4">
 					<div class="contact">
-						<i class="fa fa-map-marker" style="color: #5dbd9f;"></i>
+						<i class="fa fa-map-marker" style="color: #4b9880;"></i>
 						<h3>Dirección</h3>
 						<p>Villa Real 134 Col. Villas de Santa Julia C.P 37530</p>
 					</div>
@@ -487,32 +487,21 @@
 			<!-- Row -->
 			<div class="row">
 
-				<div class="col-md-12">
+				<div class="col-md-5">
 
 					<!-- footer logo -->
 					<div class="footer-logo">
-						<a href="index.html"><img src="img/logoBajio.png" alt="logo"></a>
+						<a href="index.html"><img src="img/logoBajio.png" alt="logo" width="100"></a>
 					</div>
+				</div>
 					<!-- /footer logo -->
 
-					<!-- footer follow -->
-					<!-- <ul class="footer-follow">
-						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="#"><i class="fa fa-instagram"></i></a></li>
-						<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-						<li><a href="#"><i class="fa fa-youtube"></i></a></li>
-					</ul> -->
-					<!-- /footer follow -->
-
 					<!-- footer copyright -->
-					<div class="footer-copyright">
+					<div class="footer-copyright col-md-6">
 						<p >Copyright © 2018. Desarrollado y Editado por <a href="https://www.sicitec.com" target="_blank">Sicitec</a></p>
 					</div>
 					<!-- /footer copyright -->
 
-				</div>
 
 			</div>
 			<!-- /Row -->
