fix: arreglo de plantilla bajio obsercion sr. R

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" style="height: 100vh" >
       <div class="item active">
-        <img src="img/17.jpg" alt="Los Angeles" >
+        <img src="img/17.jpg" alt="Los Angeles" style="width: 100%;" >
       </div>
 
       <div class="item">
-        <img src="img/background2.jpg" alt="Chicago" >
+        <img src="img/background2.jpg" alt="Chicago" style="width: 100%;">
       </div>
       <div class="item">
-        <img src="img/background3.jpg" alt="New york" >
+        <img src="img/background3.jpg" alt="New york" style="width: 100%;" >
       </div>
   </div>
 </div>
@@ -105,7 +105,7 @@
 					<!-- home content -->
 					<div class="col-md-10 col-md-offset-1">
 						<div class="home-content">
-							<h1 class="white-text" style="font-size: 40px; text-shadow: 1px 1px 3px black;">Especialistas en protección civil, seguridad industrial, salud ocupacional y gestion ambiental</h1>
+							<h1 class="white-text" style="font-size: 40px; text-shadow: 1px 1px 3px black; text-transform: capitalize;">Especialistas en protección civil, seguridad industrial, salud ocupacional y gestión ambiental</h1>
 					</div>
 					<!-- /home content -->
 				</div>
@@ -135,7 +135,7 @@
 				
 				<div class="col-md-12 pull-right ">
 					<div class="about">
-					<img class="img-responsive pull-left" src="./img/954.jpg" width="400" alt="" style="margin-right: 15px">
+					<img class="imgJuliot-left pull-left" src="./img/954.jpg" width="400" alt="" >
 						<i class="fa fa-cogs" style="color: #4b9880;"></i>
 						<h3>Quienes Somos</h3>
 						<p  align="justify">Somos una empresa  en la que se involucran  perfiles profesionistas diversos, así como otras empresas del mismo ramo con las  que formamos alianzas con el objetivo proporcionar a nuestros clientes soluciones integrales de asesoría, capacitación y gestión  en materia ambiental y seguridad laboral; basados en los valores de honestidad, responsabalilidad, lealtad y respeto. </p>
@@ -155,7 +155,7 @@
 				<!-- about -->
 				<div class="col-md-12 pull-right">
 					<div class="about">
-							<img class="img-responsive pull-left" src="./img/blog3.jpg" width="400" alt="" style="margin-right: 15px">
+							<img class="imgJuliot-left  pull-left" src="./img/blog3.jpg" width="400" alt="">
 						<i class="fa fa-bookmark" style="color: #4b9880;"></i>
 						<h3>Visión</h3>
 						<p style=" padding: 30px" align="justify">Ser la empresa reconocida por la calidad de sus servicios de asesoría y gestión en materia ambiental y seguridad laboral a través de nuestros asesores altamente capacitados, compormetivos y eficientes.</p>
@@ -206,7 +206,7 @@
 				</div>
 				<!-- /service -->
 				<div class="col-md-3 pull-center">
-					<img class="img-responsive" src="./img/1722.jpg" alt="" style="border-radius: 100px; box-shadow: 5px 1px 10px;">
+					<img class="img-responsive-j" src="./img/1722.jpg" alt="" width="280" style="border-radius: 100px; box-shadow: 5px 1px 10px; margin-top: 25px;">
 				</div>
 				<!-- service -->
 				<div class="col-md-9 col-sm-6">
@@ -218,7 +218,7 @@
 				</div>
 				<!-- /service -->
 				<div class="col-md-3 pull-center">
-					<img class="img-responsive" src="./img/bajio.png" alt=""  style="border-radius: 100px; box-shadow: 5px 1px 10px;">
+					<img class="img-responsive" src="./img/bajio.png" alt=""  width="280"  style="border-radius: 100px; box-shadow: 5px 1px 10px; margin-top: 20px;">
 				</div>
 				<!-- service -->
 				<div class="col-md-9 col-sm-6">
@@ -230,7 +230,7 @@
 				</div>
 				<!-- /service -->
 				<div class="col-md-3 pull-center">
-					<img class="img-responsive" src="./img/auditor_ambiental-1.jpg" alt=""  style="border-radius: 100px; box-shadow: 5px 1px 10px;">
+					<img class="img-responsive" src="./img/auditor_ambiental-1.jpg" alt=""   width="280" style="border-radius: 100px; box-shadow: 5px 1px 10px; margin-top: 10px;">
 				</div>
 			</div>
 			<!-- /Row -->
@@ -325,92 +325,7 @@
 
 	</div>
 	<!-- /Pricing -->
-	<!-- Team -->
-	<div hidden id="team" class="section md-padding">
-
-		<!-- Container -->
-		<div class="container">
-
-			<!-- Row -->
-			<div class="row">
-
-				<!-- Section header -->
-				<div class="section-header text-center">
-					<h2 class="title">Enlaces</h2>
-				</div>
-				<!-- /Section header -->
-
-				<!-- team -->
-				<div class="col-sm-4">
-					<div class="team">
-						<div class="team-img">
-							<img class="img-responsive" src="./img/team1.jpg" alt="">
-							<div class="overlay">
-								<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="team-content">
-							<h3>John Doe</h3>
-							<span>Web Designer</span>
-						</div>
-					</div>
-				</div>
-				<!-- /team -->
-
-				<!-- team -->
-				<div class="col-sm-4">
-					<div class="team">
-						<div class="team-img">
-							<img class="img-responsive" src="./img/team2.jpg" alt="">
-							<div class="overlay">
-								<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="team-content">
-							<h3>John Doe</h3>
-							<span>Web Designer</span>
-						</div>
-					</div>
-				</div>
-				<!-- /team -->
-
-				<!-- team -->
-				<div class="col-sm-4">
-					<div class="team">
-						<div class="team-img">
-							<img class="img-responsive" src="./img/team3.jpg" alt="">
-							<div class="overlay">
-								<div class="team-social">
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-google-plus"></i></a>
-									<a href="#"><i class="fa fa-twitter"></i></a>
-								</div>
-							</div>
-						</div>
-						<div class="team-content">
-							<h3>John Doe</h3>
-							<span>Web Designer</span>
-						</div>
-					</div>
-				</div>
-				<!-- /team -->
-
-			</div>
-			<!-- /Row -->
-
-		</div>
-		<!-- /Container -->
-
-	</div>
-	<!-- /Team -->
+		
 	<!-- Contact -->
 	<div id="contact" class="section xd-padding">
 
@@ -479,7 +394,7 @@
 
 
 	<!-- Footer -->
-	<footer id="footer" class="sm-padding bg-dark">
+	<footer id="footer" class="xd-padding bg-dark">
 
 		<!-- Container -->
 		<div class="container">
